--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
       <br><br>
-      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.jfif" alt="COMPTIA" width="250" height="200"></a><br><br>
+      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="250" height="200"></a><br><br>
       <p class="lead" style="color:red"><strong>(2022 - Current) Deputy Secretary at CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
       <p>
         Serving as the Deputy Secretary at UTSA’s CompTIA Student Chapter club, the most outstanding new student organization in 2021 at UTSA.
