--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -73,6 +73,21 @@
                 <a href="#week14">Week 14</a>
                 <a href="#week15">Week 15</a>
                 <a href="#week16">Week 16</a>
+                <a href="#week17">Week 17</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">May</button>
+              <div class="dropdown-content">
+                <a href="#week18">Week 17</a>
+                <!--
+                <a href="#week14">Week 14</a>
+                <a href="#week15">Week 15</a>
+                <a href="#week16">Week 16</a>
+                <a href="#week17">Week 17</a>
+                -->
               </div>
             </div>
           </li>
@@ -2409,6 +2424,7 @@
         <a href="https://app.hackthebox.com/machines/456" target="_blank">Retired</a> : HackTheBox <br><br>
       </p>
       <br><br>
+      <h2 id="week17">Week 17</h2> <br><br><br>
       <h3>Day 120: April 29 2022</h3><br>
       <p>Break Day</p>
       <br><br>
