--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2453,6 +2453,25 @@
       <h3>Day 121: May 1 2022</h3><br>
       <p>Break Day</p>
       <br><br>
+      <h3>Day 122: May 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/234" target="_blank">Remote</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            <a href="https://www.youtube.com/watch?v=xftEuVQ7kY0&list=WL&index=30&ab_channel=TheCyberMentor" target="_blank">How to Build an Active Directory Hacking Lab</a> : The Cyber Mentor <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://ms-official5878.medium.com/account-takeover-using-forgot-password-functionality-c53a58566d8e" target="_blank">Account Takeover [Using Forgot Password Functionality]</a> : Mohammad Mohsin <br><br>
+            <a href="https://medium.com/@turkishhoodie010/layer-2-attack-7fc08b42e0c2" target="_blank">LAYER 2 ATTACK</a> : Ahmet Göker <br><br>
+            <a href="https://ms-official5878.medium.com/account-takeover-via-broken-access-control-c5f36c491d11" target="_blank">Account Takeover [Via Broken Access Control]</a> : Mohammad Mohsin <br><br>
+            <a href="https://upadhyayraj.medium.com/knightctf-2022-write-up-3b421865bb25" target="_blank">KnightCTF-2022 Write-up</a> : Raj Upadhyay <br><br> 
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
