--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -81,7 +81,7 @@
             <div class="dropdown">
               <button class="dropbtn">May</button>
               <div class="dropdown-content">
-                <a href="#week18">Week 17</a>
+                <a href="#week18">Week 18</a>
                 <!--
                 <a href="#week14">Week 14</a>
                 <a href="#week15">Week 15</a>
@@ -2450,6 +2450,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week18">Week 18</h2> <br><br><br>
       <h3>Day 121: May 1 2022</h3><br>
       <p>Break Day</p>
       <br><br>
@@ -2472,6 +2473,8 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 123: May 3 2022</h3><br>
+      <p>Break Day</p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
