--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2473,8 +2473,9 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 123: May 3 2022</h3><br>
-      <p>Break Day</p>
+      <h3>Day 123: May 3 2022 - Day 126: May 6 2022</h3><br>
+      <p>University Finals</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
