--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2476,6 +2476,8 @@
       <h3>Day 123: May 3 2022 - Day 127: May 7 2022</h3><br>
       <p>University Finals</p>
       <br><br>
+      <h3>Day 128: May 8 2022</h3><br>
+      <p>Break Day</p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
