--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2478,6 +2478,31 @@
       <br><br>
       <h3>Day 128: May 8 2022</h3><br>
       <p>Break Day</p>
+      <h3>Day 129: May 9 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/introtooffensivesecurity" target="_blank">Intro to Offensive Security</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/defensivesecurity" target="_blank">Intro to Defensive Security</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/techsupp0rt1" target="_blank">Tech_Supp0rt: 1</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/introwebapplicationsecurity" target="_blank">Web Application Security</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/0x41haz" target="_blank">0x41haz</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/423" target="_blank">Pandora</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://divyanshsharma2401.medium.com/bypassing-waf-for-2222-f99b80cfdb9b" target="_blank">Bypassing WAF for $2222</a> : Divyansh Sharma <br><br>
+            <a href="https://systemweakness.com/passive-reconnaissance-using-only-kali-terminal-infosec-9e1e991ff1d7" target="_blank">Passive Reconnaissance Using Only Kali Terminal | Infosec |</a> : Medusa <br><br>
+            <a href="https://shubhdeepp.medium.com/how-i-got-apple-hall-of-fame-3d86f858c05f" target="_blank">How I got Apple Hall Of Fame !</a> : shubhdeep <br><br>
+            <a href="https://0x1rootjkqsta.medium.com/baby-ninja-jinja-hackthebox-writeup-web-exploitation-24a4cf8f2af4" target="_blank">Baby Ninja Jinja — HackTheBox — Writeup — Web Exploitation</a> : rootjkqsta <br><br>
+            <a href="https://medium.com/@erictee2012/my-oscp-journey-in-new-exam-format-2a6d32585036" target="_blank">My OSCP journey in new exam format</a> : Erictee <br><br>
+            <a href="https://medium.com/@abdalrahman.alshammas/fuzzing-and-credentials-leakage-nice-bug-hunting-writeup-38b2e774b300" target="_blank">Fuzzing and credentials leakage..awesome bug hunting writeup</a> : Abdalrahman Alshammas <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
