--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -82,8 +82,8 @@
               <button class="dropbtn">May</button>
               <div class="dropdown-content">
                 <a href="#week18">Week 18</a>
+                <a href="#week19">Week 19</a>
                 <!--
-                <a href="#week14">Week 14</a>
                 <a href="#week15">Week 15</a>
                 <a href="#week16">Week 16</a>
                 <a href="#week17">Week 17</a>
@@ -2476,6 +2476,7 @@
       <h3>Day 123: May 3 2022 - Day 127: May 7 2022</h3><br>
       <p>University Finals</p>
       <br><br>
+      <h2 id="week19">Week 19</h2> <br><br><br>
       <h3>Day 128: May 8 2022</h3><br>
       <p>Break Day</p>
       <h3>Day 129: May 9 2022</h3><br>
