--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2504,6 +2504,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 130: May 10 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/pwn101" target="_blank">PWN101</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/423" target="_blank">Pandora</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://notifybugme.medium.com/how-i-found-17-critical-and-medium-security-bug-on-a-well-known-bank-6f2053e5b805" target="_blank">HOW I Found 17 Critical and Medium Security Bug on INDUSIND Bank</a> : Santosh Kumar Sha (@killmongar1996) <br><br>
+            <a href="https://medium.com/@prajpatil29/active-directory-enumeration-with-powerview-23faef0696fc" target="_blank">Active Directory Enumeration with Powerview script</a> : Prajwal Patil <br><br>
+            <a href="https://medium.com/@karandarjishack/authentication-bypass-using-otp-63cc53bd265b" target="_blank">Authentication Bypass using OTP</a> : karandarjishack <br><br>
+            <a href="https://infosecwriteups.com/the-abcs-of-kerberoasting-4b192e6a9fb4" target="_blank">The ABCs of Kerberoasting</a> : Security Lit Limited <br><br>
+            <a href="https://ms-official5878.medium.com/wordpress-users-disclosure-500-bounty-fcd57b4f7ced" target="_blank">WordPress Users Disclosure [500$ Bounty]</a> : Mohammad Mohsin <br><br>
+            <a href="https://medium.com/@jedus0r/hello-everyone-im-a-french-cybersecurity-engineer-and-you-can-ping-me-as-jedus0r-cdb0301b5631" target="_blank">How I passed the OSCP certification in my first attempt, and hacked the 5/5 targets of the exam</a> : jedus0r <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
