--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2525,6 +2525,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 131: May 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            PWK Course <br><br>
+            <a href="https://app.hackthebox.com/machines/203" target="_blank">Networked</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/careersincyber" target="_blank">Careers in Cyber</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://thexssrat.medium.com/resources-to-help-make-you-a-better-hacker-304ad170afd3" target="_blank">Resources to help make you a better hacker</a> : Thexssrat <br><br>
+            <a href="https://systemweakness.com/wolverine-security-ctf-80778bafa25f" target="_blank">Wolverine Security CTF</a> : whois_sin <br><br>
+            <a href="https://medium.com/@StarDust770/how-to-access-the-dark-web-straightforward-guide-37415cc5b299" target="_blank">How to access the Dark Web</a> : StarDust <br><br>
+            <a href="https://iics.medium.com/pwn2own-miami-paid-400-000-usd-for-26-zero-day-exploits-on-ics-and-scada-products-69308c5b716a" target="_blank">Pwn2Own Miami paid $400,000 USD for 26 zero-day exploits on ICS and SCADA products</a> : Eli Cyber Security <br><br>
+            <a href="https://medium.com/@theCTIGuy/why-i-write-malware-and-you-should-too-ce4cc4fa8891" target="_blank">Why I Write Malware and You Should Too</a> : Mitch Edwards <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
