--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2511,6 +2511,7 @@
             <a href="https://tryhackme.com/room/pwn101" target="_blank">PWN101</a> : TryHackMe <br><br>
             <a href="https://app.hackthebox.com/machines/423" target="_blank">Pandora</a> : HackTheBox <br><br>
             <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            Bought the PWK Course <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
@@ -2543,6 +2544,28 @@
             <a href="https://iics.medium.com/pwn2own-miami-paid-400-000-usd-for-26-zero-day-exploits-on-ics-and-scada-products-69308c5b716a" target="_blank">Pwn2Own Miami paid $400,000 USD for 26 zero-day exploits on ICS and SCADA products</a> : Eli Cyber Security <br><br>
             <a href="https://medium.com/@theCTIGuy/why-i-write-malware-and-you-should-too-ce4cc4fa8891" target="_blank">Why I Write Malware and You Should Too</a> : Mitch Edwards <br><br>
           </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 132: May 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            PWK Course <br><br>
+            <a href="https://tryhackme.com/room/redteamengagements" target="_blank">Red Team Engagements</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/248" target="_blank">Admirer</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/c-language-for-hackers-beyond-0x01-23bdb00e53f2" target="_blank">C Language for Hackers & Beyond! 0x01</a> : Vicky Aryan <br><br>
+            <a href="https://maxva.medium.com/how-i-got-a-lousyt-shirt-from-the-dutch-goverment-2a0d13fe7675" target="_blank">How I got a lousyT-Shirt from the Dutch Government.</a> : Mava <br><br>
+            <a href="https://medium.com/@z.x/how-we-hacked-bypassed-admin-panel-just-by-js-file-eaa773b5cdb4" target="_blank">How We hacked (bypassed) Admin Panel just by JS file</a> : Zhenwar Hawlery <br><br>
+            <a href="https://aravind07.medium.com/otp-bypass-pato-100-dollars-bounty-8944a1669d66" target="_blank">OTP Bypass + PATO = 100 Dollars Bounty</a> : Gnana Aravind <br><br>
+            <a href="https://medium.com/@vivek-kumar/buffer-overflows-73ba7cc8a8e1" target="_blank">Buffer Overflows</a> : Vivek Kumar <br><br>
+            <a href="https://chennylmf.medium.com/just-got-my-crtp-heres-my-exam-experience-8643c471adfe" target="_blank">Just got my CRTP ! Here’s my exam experience</a> : Chenny Ren <br><br>
+          </p>  
         <br><br>
       </p>
       <br><br>
