--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2569,6 +2569,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 133: May 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">DC-01</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/pwn101-walkthrough-tryhackme-d34b4236b2a0" target="_blank">PWN101 Walkthrough | TryHackMe</a> : 7h3h4ckv157 <br><br>
+            <a href="https://warnerchad.medium.com/mitre-d3fend-cyber-defense-technique-catalog-f74afbe392f3" target="_blank">MITRE D3FEND: Cyber Defense Technique Catalog</a> : Chad Warner <br><br>
+            <a href="https://medium.com/@0xwan/how-to-reverse-engineer-executable-files-230216bdca3b" target="_blank">How To Reverse Engineer Executable Files</a> : 0xwan <br><br>
+            <a href="https://medium.com/pentesternepal/everything-you-need-to-know-about-lsass-from-red-team-perspective-5c3f236432b2" target="_blank">Everything you need to know about LSASS (From Red Team Perspective)</a> : Abhiyan Chhetri <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
