--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2587,6 +2587,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 134: May 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://ctf.hackthebox.com/" target="_blank">HackTheBox Cyber Apocalypse CTF 2022</a> <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://bin3xish477.medium.com/a-passwordless-future-dd0329546b1d" target="_blank">A Passwordless Future</a> : Alexis Rodriguez <br><br>
+            <a href="https://medium.com/@huntersherlock11/p1-bug-pii-information-disclosure-7669ebbb91a8" target="_blank">P1 Bug — PII information disclosure</a> : Huntersherlock <br><br>
+            <a href="https://systemweakness.com/exploring-how-dns-works-with-dig-2443fe4a3645" target="_blank">Exploring how DNS works with DIG</a> : Kester Griffiths <br><br>
+            <a href="https://nafish.medium.com/cyber-security-projects-for-students-3df9beb1c92d" target="_blank">Cyber Security Projects For Students</a> : Nafish Alam <br><br>
+            <a href="https://medium.com/@Aircon/attacktive-directory-pentesting-tryhackme-thm-fa113125ce3f" target="_blank">Attacktive Directory — Pentesting | TryHackMe (THM)</a> : Aircon <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
