--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2607,7 +2607,7 @@
       </p>
       <br><br>
       <h3>Day 135: May 15 2022</h3>
-      <p>Break Day</p>
+      <p>PWK Course</p> <br><br>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
