--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -83,8 +83,8 @@
               <div class="dropdown-content">
                 <a href="#week18">Week 18</a>
                 <a href="#week19">Week 19</a>
+                <a href="#week20">Week 20</a>
                 <!--
-                <a href="#week15">Week 15</a>
                 <a href="#week16">Week 16</a>
                 <a href="#week17">Week 17</a>
                 -->
@@ -2606,8 +2606,30 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week20">Week 20</h2> <br><br><br>
       <h3>Day 135: May 15 2022</h3>
       <p>PWK Course</p> <br><br>
+      <br><br>
+      <h3>Day 136: May 16 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Heist</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            <a href="https://app.hackthebox.com/machines/416" target="_blank">Backdoor</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@yashshirke7806/how-to-find-bugs-on-dutch-govt-709df95a4586" target="_blank">My Story OF Dutch Govt......!</a> : Yashshirke <br><br>
+            <a href="https://xstag0.com/hacking-with-powershell-blue-team/" target="_blank">Hacking With Powershell: Blue Team</a> : Xstag0 <br><br>
+            <a href="https://ms-official5878.medium.com/cross-site-request-forgery-15a3740c6ef7" target="_blank">Account Takeover [Via Cross Site Request Forgery]</a> : Mohammad Mohsin <br><br>
+            <a href="https://systemweakness.com/rce-via-dependency-confusion-e0ed2a127013" target="_blank">RCE via Dependency Confusion</a> : Sm4rty <br><br>
+            <a href="https://thexssrat.medium.com/002-test-plan-template-af07acd8f6e" target="_blank">002. Test plan template</a> : Thexssrat <br><br>
+          </p>  
+        <br><br>
+      </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
