--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2631,6 +2631,28 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 137: May 17 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/1" target="_blank">Lame</a> : HackTheBox <br><br>
+            PWK Course <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Heist</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Pebbles</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            <a href="https://academy.hackthebox.com/module/details/144" target="_blank">Information Gathering - Web Edition</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@GromHacks/guide-to-the-2022-oscp-exam-on-m1-with-active-directory-d8b4ce30f4f3" target="_blank">Guide to the 2022 OSCP Exam on M1 (with Active Directory)</a> : GromHacks <br><br>
+            <a href="https://medium.com/@v0lshebrer/what-i-learned-after-hacking-my-first-20-boxes-from-hack-the-box-b8205ad1db2e" target="_blank">What I learned after hacking my first 20 boxes from Hack the Box…</a> : v0lshebrer <br><br>
+            <a href="https://medium.com/@0xwan/picoctf-2022-keygenme-writeup-reverse-engineering-f05340148ad1" target="_blank">PicoCTF 2022: Keygenme writeup (reverse engineering)</a> : 0xwan <br><br>
+            <a href="https://champ35.medium.com/picture-yourself-becoming-a-hacker-soon-beginners-guide-e623c768ce7b" target="_blank">Picture Yourself Becoming an Ethical Hacker Now (Beginner’s Guide)</a> : Champ35 <br><br>
+            <a href="https://pathakabhi24.medium.com/red-teaming-cc407e3956a9" target="_blank">Red Teaming</a> : Abhinav Pathak <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
