--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2653,6 +2653,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 138: May 18 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+            <a href="https://academy.hackthebox.com/module/details/144" target="_blank">Information Gathering - Web Edition</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/317" target="_blank">Spectra</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://ms-official5878.medium.com/source-code-disclosure-1a4220cf87b8" target="_blank">Source Code Disclosure</a> : Mohammad Mohsin <br><br>
+            <a href="https://medium.com/@adeesh08/vulnhub-walkthroughs-box-1-7b633b898a1f" target="_blank">VulnHub Walkthrough’s : BOX 1</a> : Adeesh Unnikrishnan <br><br>
+            <a href="https://bank-security.medium.com/hunting-cobalt-strike-servers-385c5bedda7b" target="_blank">Hunting Cobalt Strike Servers</a> : Bank Security <br><br>
+            <a href="https://moreillon.medium.com/ssh-reverse-shells-5094d9be2094" target="_blank">SSH reverse shells</a> : Maxime Moreillon <br><br>
+            <a href="https://systemweakness.com/attacking-kerberos-kerberoasting-as-rep-roasting-active-directory-windows-e1b770b95c4b" target="_blank">Attacking Kerberos | Kerberoasting | AS-REP Roasting | Active Directory | Windows |</a> : Medusa <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
