--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2673,6 +2673,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 139: May 19 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Internal</a> : Offensive Security Proving Grounds (Practice) <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/active-directory-overview-98692e1b0233" target="_blank">Active Directory Overview</a> : Hacktivities <br><br>
+            <a href="https://al1z4deh.medium.com/vulnhub-deathnote-1-f81b0794bea2" target="_blank">VulnHub: DeathNote: 1</a> : Al1z4deh:~# echo "Welcome" <br><br>
+            <a href="https://medium.com/@Varma_Chekuri/windows-privilege-escalation-aa2c048d246b" target="_blank">Windows Privilege Escalation</a> : Varma_Chekuri <br><br>
+            <a href="https://medium.com/@cybertix/deep-dive-into-dns-records-5dd2600f70c8" target="_blank">Deep Dive into DNS Records</a> : Cybertix <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 139: May 19 2022</h3><br>
+      <p>Break Day</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
