--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2690,8 +2690,8 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 139: May 19 2022</h3><br>
-      <p>Break Day</p>
+      <h3>Day 140: May 20 2022 - Day 141: May 21 2022</h3><br>
+      <p>Break Days</p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
