--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -84,8 +84,8 @@
                 <a href="#week18">Week 18</a>
                 <a href="#week19">Week 19</a>
                 <a href="#week20">Week 20</a>
+                <a href="#week21">Week 21</a>
                 <!--
-                <a href="#week16">Week 16</a>
                 <a href="#week17">Week 17</a>
                 -->
               </div>
@@ -2690,8 +2690,29 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 140: May 20 2022 - Day 142: May 22 2022</h3><br>
+      <h3>Day 140: May 20 2022 - Day 141: May 21 2022</h3><br>
       <p>Break Days</p>
+      <br><br>
+      <h2 id="week21">Week 21</h2> <br><br><br>
+      <h3>Day 141: May 21 2022</h3>
+      <p>Break Day</p>
+      <br><br>
+      <h3>Day 142: May 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/116" target="_blank">Attacking Common Services</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://warnerchad.medium.com/apt-threat-actor-lists-752df1673bc5" target="_blank">APT & Threat Actor Lists</a> : Chad Warner <br><br>
+            <a href="https://alican-kiraz1.medium.com/incident-response-part-1-preparation-en-b656d3f4f209" target="_blank">Incident Response Part 1: Preparation | EN</a> : Alican Kiraz <br><br>
+            <a href="https://alican-kiraz1.medium.com/incident-response-part-2-1-installation-of-detection-systems-en-5800d8fc4c46" target="_blank">Incident Response Part 2.1: Installation of Detection Systems | EN</a> : Alican Kiraz <br><br>
+            <a href="https://warnerchad.medium.com/osint-investigations-we-know-what-you-did-that-summer-notes-8d4e7b53ac04">“OSINT Investigations: We know what you did that summer” Notes</a> : Chad Warner <br><br>
+          </p>  
+        <br><br>
+      </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
