--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2714,6 +2714,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 143: May 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/116" target="_blank">Attacking Common Services</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/471" target="_blank">OpenSource</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://systemweakness.com/hacking-emdee-five-for-life-baeb8c9c8bac" target="_blank">Hacking “Emdee five for life”</a> : Murat Aydin <br><br>
+            <a href="https://djsubstance.medium.com/quick-guide-on-custom-web-page-design-dos-donts-get-to-1-on-google-level-beginner-c69c9f8fd377" target="_blank">Quick guide on custom web page design — do’s don'ts get to #1 on Google (level: beginner)</a> : DJ Substance <br><br>
+            <a href="https://medium.com/@gokhangokcen/journey-of-a-cyber-guardian-reconnaissance-afb47279d64" target="_blank">Reconnaissance</a> : Gökhan Gökcen <br><br>
+            <a href="https://infosecwriteups.com/wireless-penetration-testing-wpa-2-cracking-9c925e51a873" target="_blank">Wireless Penetration Testing (WPA-2 Cracking)</a> : Vamshi Vemula <br><br>
+            <a href="https://infosecwriteups.com/tryhackme-biblioteca-c56be949564c" target="_blank">TryHackMe: Biblioteca</a> : Naman Jain <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
