--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2694,10 +2694,10 @@
       <p>Break Days</p>
       <br><br>
       <h2 id="week21">Week 21</h2> <br><br><br>
-      <h3>Day 141: May 21 2022</h3>
+      <h3>Day 142: May 22 2022</h3>
       <p>Break Day</p>
       <br><br>
-      <h3>Day 142: May 22 2022</h3><br>
+      <h3>Day 143: May 23 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -2714,7 +2714,7 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 143: May 23 2022</h3><br>
+      <h3>Day 144: May 24 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -2729,6 +2729,25 @@
             <a href="https://medium.com/@gokhangokcen/journey-of-a-cyber-guardian-reconnaissance-afb47279d64" target="_blank">Reconnaissance</a> : Gökhan Gökcen <br><br>
             <a href="https://infosecwriteups.com/wireless-penetration-testing-wpa-2-cracking-9c925e51a873" target="_blank">Wireless Penetration Testing (WPA-2 Cracking)</a> : Vamshi Vemula <br><br>
             <a href="https://infosecwriteups.com/tryhackme-biblioteca-c56be949564c" target="_blank">TryHackMe: Biblioteca</a> : Naman Jain <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 145: May 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/116" target="_blank">Attacking Common Services</a> : HackTheBox Academy <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://popalltheshells.medium.com/i-obtained-admin-access-via-account-activation-link-in-30-seconds-dd7f115ae1d2" target="_blank">I Obtained ADMIN access via Account Activation link [In 30 seconds]</a> : Ignatius Michael <br><br>
+            <a href="https://medium.com/@rahul_kumar_1/hack-the-box-late-walkthrough-6960bc523493" target="_blank">HACK THE BOX — LATE WALKTHROUGH</a> : Rahul Kumar <br><br>
+            <a href="https://ms-official5878.medium.com/xss-through-file-upload-f3f4e55616ad" target="_blank">XSS Through File Upload</a> :: Mohammad Mohsin <br><br>
+            <a href="https://medium.com/@turkishhoodie010/pointers-in-depth-592a0b85acbc" target="_blank">Pointers in Depth</a> : Ahmet Göker <br><br>
+            <a href="https://gupta-bless.medium.com/learning-more-about-threat-hunting-181f8483d155" target="_blank">Learning more about “Threat Hunting”</a> : Gupta Bless <br><br>
           </p>  
         <br><br>
       </p>
