--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2752,6 +2752,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 146: May 26 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/116" target="_blank">Attacking Common Services</a> : HackTheBox Academy <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Muddy</a> : Offensive Security Proving Grounds (Practice) <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@arshiadev/networking-overview-c97f4f7ec0bc" target="_blank">Networking Overview</a> : arshiadev <br><br>
+            <a href="https://medium.com/@arshiadev/network-types-2dba9adeac11" target="_blank">Network Types</a> : arshiadev <br><br>
+            <a href="https://ericazelic.medium.com/beginners-guide-to-self-learning-windows-and-active-directory-part-1-b665399d252f" target="_blank">Beginners Guide to Self-Learning Windows and Active Directory: Part 1</a> : EricaZelic <br><br>
+            <a href="https://as745591.medium.com/albussec-penetration-list-06-command-injection-sample-7df7be0a05c9" target="_blank">AlbusSec:- Penetration-List 06 Command Injection — Sample</a> : Albus Security <br><br>
+            <a href="https://thexssrat.medium.com/miniseries-xss-to-the-core-pt-1-4a979b9e5139" target="_blank">Miniseries: XSS to the core — Pt.1</a> : Thexssrat <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
