--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br>
         <h1>Aditya Dindi</h1> <br>
-        <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
-        <p class="lead">Cyber Security Student at the University of Texas at San Antonio </p> <br>
+        <small class="lead"><strong>Cyber Security Intern @</strong> MITRE</small> <br>
+        <small class="lead"><strong>Security Researcher @ <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
+        <p class="lead"><strong>Cyber Security Student</strong> @ the University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a><br><br><br><br>
         <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
         <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
@@ -73,7 +74,7 @@
         Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
       <br><br>
-      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="250" height="200"></a><br><br>
+      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="250" height="250"></a><br><br>
       <p class="lead" style="color:red"><strong>(2022 - Current) Deputy Secretary at CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
       <p>
         Serving as the Deputy Secretary at UTSA’s CompTIA Student Chapter club, the most outstanding new student organization in 2021 at UTSA.
