--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -85,9 +85,7 @@
                 <a href="#week19">Week 19</a>
                 <a href="#week20">Week 20</a>
                 <a href="#week21">Week 21</a>
-                <!--
-                <a href="#week17">Week 17</a>
-                -->
+                <a href="#week22">Week 22</a>
               </div>
             </div>
           </li>
@@ -2767,6 +2765,50 @@
             <a href="https://ericazelic.medium.com/beginners-guide-to-self-learning-windows-and-active-directory-part-1-b665399d252f" target="_blank">Beginners Guide to Self-Learning Windows and Active Directory: Part 1</a> : EricaZelic <br><br>
             <a href="https://as745591.medium.com/albussec-penetration-list-06-command-injection-sample-7df7be0a05c9" target="_blank">AlbusSec:- Penetration-List 06 Command Injection — Sample</a> : Albus Security <br><br>
             <a href="https://thexssrat.medium.com/miniseries-xss-to-the-core-pt-1-4a979b9e5139" target="_blank">Miniseries: XSS to the core — Pt.1</a> : Thexssrat <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 147: May 27 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/nunchucks-from-hackthebox-detailed-walkthrough-c09ba0f276fa" target="_blank">Nunchucks from HackTheBox — Detailed Walkthrough</a> : Pencer <br><br>
+            <a href="https://infosecwriteups.com/active-directory-overview-98692e1b0233" target="_blank">Active Directory Overview</a> : Hacktivities <br><br>
+            <a href="https://infosecwriteups.com/kerberos-authentication-in-active-directory-2dc4af232f65" target="_blank">Kerberos Authentication in Active Directory</a> : Hacktivities <br><br>
+            <a href="https://rosshosman.medium.com/the-hunt-for-the-red-team-9fa204c79cdd" target="_blank">The Hunt for the Red Team</a> : Ross Hosman <br><br>
+            <a href="https://medium.com/@srivastavasam27/your-5-min-guide-to-most-useful-features-in-burp-suite-60d674f3ef93" target="_blank">Your 5 min guide to most useful features in Burp Suite</a> : Samarth Srivastava <br><br>
+            <a href="https://medium.com/@cron-swanson/challenges-re-linux-e12-writeup-reverse-engineering-a-64-bit-linux-binary-with-ghidra-ce99e57a9a29" target="_blank">Challenges.re Linux e12 Writeup — Reverse Engineering a 64 bit Linux Binary with Ghidra</a> : cron-swanson <br><br>
+            <a href="https://medium.com/@cron-swanson/tamu-ctf-2022-writeup-reversing-covfefe-54073d915370" target="_blank">TAMU CTF 2022 Writeup — Reversing: Covfefe</a> : cron-swanson <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 148: May 28 2022 - Day 149: May 29 2022</h3>
+      <p>Break Days</p>
+      <br></br>
+      <h2 id="week22">Week 22</h2> <br><br><br>
+      <h3>Day 150: May 30 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/biblioteca" target="_blank">Biblioteca</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/cyberheroes">CyberHeroes</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/intronetworksecurity" target="_blank">Network Security</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/operatingsystemsecurity" target="_blank">Operating System Security</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/securityoperations" target="_blank">Security Operations</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/starting-point" target="_blank">Redeemer</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/starting-point" target="_blank">Unified</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/how-an-open-redirection-leads-to-an-account-takeover-73ea883055d1" target="_blank">How an Open Redirection Leads to an Account Takeover?</a> : Mahendra Purbia (Mah3Sec_) <br><br>
+            <a href="https://medium.com/@theCTIGuy/the-5-best-books-for-malware-development-105e3aaec2df" target="_blank">The 5 Best Books for Malware Development</a> : Mitch Edwards <br><br>
+            <a href="https://medium.com/@evilmango/hive-ransomware-attack-forensics-incident-response-and-penetration-testing-f8be09fdd814" target="_blank">Hive Ransomware Attack (Forensics, Incident Response, and Penetration Testing)</a> : evilmango <br><br>
+            <a href="https://princerohit8800.medium.com/blunder-e39b2cfda153" target="_blank">Blunder- Hack The Box</a> : cY83rR0H1t <br><br>
+            <a href="https://medium.com/@saruman0x01/crowsec-edtech-write-up-hijacking-675ee8d18c" target="_blank">CrowSec EdTech Write-Up: Hijacking</a> : saruman <br><br>
+            <a href="https://medium.com/@saruman0x01/crowsec-edtech-write-up-poisoning-518293fe8f51" target="_blank">CrowSec EdTech Write-Up: Poisoning</a> : saruman <br><br>
           </p>  
         <br><br>
       </p>
