--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2813,6 +2813,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 151: May 31 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Kevin</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            <a href="https://tryhackme.com/jr/btwindowsinternals" target="_blank">Core Windows Processes</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/btsysinternalssg" target="_blank">Sysinternals</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/cyberstarters-ctf-gunship-93c23b3d5f1d" target="_blank">CyberStarters 2022 CTF — Gunship</a> : OTR <br><br>
+            <a href="https://valsamaras.medium.com/introduction-to-x64-linux-binary-exploitation-part-1-14ad4a27aeef" target="_blank">Introduction to x64 Linux Binary Exploitation (Part 1)</a> : +Ch0pin🕷️ <br><br>
+            <a href="https://vikaran101.medium.com/how-i-made-it-into-the-united-nations-hall-of-fame-as-i-slept-f567c90be227" target="_blank">How I made it into the United Nations hall of fame as I slept</a> : Vikaran <br><br>
+            <a href="https://viruszzwarning.medium.com/netbios-snmp-ldap-ethical-hacking-part-1-6-1dd0ddcb6e13" target="_blank">NetBIOS || SNMP || LDAP || Ethical hacking — Part 1.6</a> : VirusZWarning <br><br>
+            <a href="https://a51f221b.medium.com/basics-of-assembly-language-part-1-ce10ac4c45c2" target="_blank">Basics of Assembly language : Part 1</a> : A51F221B <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
