--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2833,6 +2833,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 152: June 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/49" target="_blank">Windows Fundamentals</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/339" target="_blank">Toolbox</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@chaitanya.landge20/website-hacking-information-gathering-file-upload-code-execution-file-inclusion-2c5aa40c0d90" target="_blank">Website Hacking — Information Gathering, File Upload, Code Execution, File Inclusion</a> : Chaitanya Landge <br><br>
+            <a href="https://nobunaga68.medium.com/exploitable-ctf-1-writeup-aef79ef87a6" target="_blank">Exploitable CTF 1 Writeup</a> : nobunaga68 <br><br>
+            <a href="https://infosecwriteups.com/sso-a-secure-way-for-authentication-and-authorization-6a4fb8794dd6" target="_blank">SSO: A Secure way for authentication and authorization?</a> : Security Lit Limited <br><br>
+            <a href="https://popalltheshells.medium.com/domain-admin-compromise-in-3-hours-5778902604c9" target="_blank">DOMAIN ADMIN Compromise in 3 HOURS</a> : Ignatius Michael <br><br>
+            <a href="https://medium.com/ax1al/mitre-att-ck-the-overview-6fab9a58c425" target="_blank">MITRE ATT&CK : The Overview</a> : Ax1al <br><br>
+          </p>  
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
